--- a/index.html
+++ b/index.html
@@ -21,12 +21,138 @@
             <h1>Hi. I'm Martin.</h1>
             <div class="sideBySide">
                 <div class="photoBackground" id="portrait"></div>
-                <p>I'm a proud student of Havlíčkův Brod grammar school. Ever since a young boy, I have been very passionate about computers. Eventually I began to programm. I started in visual basic, then moved on to learn python and Java. Eventually I gravitated to web development. Now I work with HTML and CSS on a day to day basis, with decent skills in PHP.</p>
+                <p id="text">I'm a proud student of Havlíčkův Brod grammar school. Ever since a young boy, I have been very passionate about computers. Eventually I began to programm. I started in visual basic, then moved on to learn python and Java. Eventually I gravitated to web development. Now I work with HTML and CSS on a day to day basis, with great knowladge of PHP.</p>
             </div>
         </section>
         <section class="fiddlebox">
             <h1>I'm:</h1>
             <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span>
+            <span>optimistic</span>
+            <span>Open-minded</span>
+            <span>Flexible</span>
+            <span>a student</span>
+            <span>a programmer</span>
+            <span>Happy</span>
+            <span>a sailor</span>
+            <span>a guitar player</span>
+            <span>a part-time lunatic</span>
+            <span>a photographer</span>
+            <span>in love with rock'n'roll</span>
+            <span>a traveller</span>
+            <span>not a morning person</span>
+            <span>Martin</span>
+            <span>geeky</span>
+            <span>a terrible dancer</span><span>Open-minded</span>
             <span>Flexible</span>
             <span>a student</span>
             <span>a programmer</span>
