--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Hi. I'm Martin.</h1>
             <div class="sideBySide">
                 <div class="photoBackground" id="portrait"></div>
-                <p id="text">I'm a proud student of Havlíčkův Brod grammar school. Ever since a young boy, I have been very passionate about computers. Eventually I began to programm. I started in visual basic, then moved on to learn python and Java. Eventually I gravitated to web development. Now I work with HTML and CSS on a day to day basis, with great knowladge of PHP.</p>
+                <p id="text">I'm a proud student of Havlíčkův Brod grammar school. Ever since a young boy, I have been very passionate about computers. Eventually I began to programm. I started in visual basic, then moved on to learn python and Java. Eventually I gravitated to web development. Now I work with HTML and CSS on a day to day basis, with a great knowladge of PHP.</p>
             </div>
         </section>
         <section class="fiddlebox">
@@ -279,6 +279,19 @@
             <span>Martin</span>
             <span>geeky</span>
             <span>a terrible dancer</span>
+        </section>
+        <section class="contactMe">
+            <h1>Contact me</h1>
+            <form action="contact.php">
+                <input name="Jmeno" placeholder="John Doe" />
+                <input name="Email" placeholder="me@johndoe.com" type="email" />
+                <textarea name="Zprava"></textarea>
+                <input type="submit" id="odeslat"/>
+                
+            </form>
+        </section>
+        <section class="footer">
+        <p>&copy;Martin Hajný 2017</p>
         </section>
     </body>
 </html>
