--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <title>Hello World</title>
+    <title>Martin Hajný</title>
     <meta charset='utf-8'>
     <meta name='description' content=''>
     <meta name='keywords' content='Martin Hajný Portfolio Web Developer PHP HTML CSS Czech'>
@@ -14,7 +14,7 @@
     <body>
         <section class="cover">
             <div class="ramecek">
-                <h1 class="coverText">Hello World.</h1>
+                <h1 class="coverText">Hello world.</h1>
             </div>
         </section>
         <section class="aboutMe">
@@ -285,7 +285,7 @@
             <form action="contact.php">
                 <input name="Jmeno" placeholder="John Doe" />
                 <input name="Email" placeholder="me@johndoe.com" type="email" />
-                <textarea name="Zprava"></textarea>
+                <textarea name="Zprava" placeholder="Hi Martin,"></textarea>
                 <input type="submit" id="odeslat"/>
                 
             </form>
