--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Hi. I'm Martin.</h1>
+          <h1 id="homeHeading" style="text-shadow: 0px 0px 15px rgba(0,0,0,0.5);">Hi. I'm Martin.</h1>
           <hr>
-          <p>Coder. Designer. Photographer. Musician.</p>
+          <p style="text-shadow: 0px 0px 5px black; color: white;">Coder. Designer. Photographer. Musician.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
         </div>
       </div>
@@ -71,7 +71,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">I love creating things.</h2>
             <hr class="light">
-            <p class="text-faded" style="text-align: justify;">There is no better feeling than when you create something. That freedom, excitement and happiness when you finish is amazing. Making websites is great. The process of starting from nothing and making something beautiful is really something special. Seeing people use it and like is a great bonus.</p>
+            <p class="text-faded" style="text-align: justify;">There is no better feeling than when you create something. That freedom, excitement and happiness when you finish is amazing. Making websites is great. The process of starting from nothing and ending with something beautiful is indescribable. And seeing people use it and like is a great bonus.</p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#portfolio">See my work!</a>
           </div>
         </div>
@@ -154,9 +154,9 @@
               </div>
             </a>
           </div>
-          <!--<div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/letsgotravel.png">
+              <img class="img-fluid" src="img/letsgotravel.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </a>
-          </div>-->
+          </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/provys.png">
               <img class="img-fluid" src="img/provys.png" alt="">
@@ -185,15 +185,15 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <a class="portfolio-box" href="img/zasuvcicka.png">
+              <img class="img-fluid" src="img/zasuvcicka.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    JuniorInternet design contest runner up
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Zásuvčička
                   </div>
                 </div>
               </div>
@@ -230,7 +230,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>(+420) 607 439 868</p>
+            <p><a href="tel:00420607439868">(+420) 607 439 868</a></p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
