--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <a class="portfolio-box" href="img/crowdcrowd.jpg">
+              <img class="img-fluid" src="img/crowdcrowd.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Statup
                   </div>
                   <div class="project-name">
-                    Project Name
+                    CrowdCrowd
                   </div>
                 </div>
               </div>
