--- a/index.html
+++ b/index.html
@@ -1,226 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107364273-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments)};
-      gtag('js', new Date());
-
-      gtag('config', 'UA-107364273-1');
-    </script>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Martin Hajný</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/creative.min.css" rel="stylesheet">
-
-  </head>
-
-  <body id="page-top">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Martin Hajný</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <!--<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-            </li>-->
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact me</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <header class="masthead">
-      <div class="header-content">
-        <div class="header-content-inner">
-          <h1 id="homeHeading" style="text-shadow: 0px 0px 15px rgba(0,0,0,0.5);">Hi. I'm Martin.</h1>
-          <hr>
-          <p style="text-shadow: 0px 0px 5px black; color: white;">Coder. Designer. Photographer. Musician.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
-        </div>
-      </div>
-    </header>
-
-    <section class="bg-primary" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">I love creating things.</h2>
-            <hr class="light">
-            <p class="text-faded" style="text-align: justify;">There is no better feeling than when you create something. That freedom, excitement and happiness when you finish is amazing. Making websites is great. The process of starting from nothing and ending with something beautiful is indescribable. And seeing people use it and like is a great bonus.</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#portfolio">See my work!</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="p-0" id="portfolio">
-      <div class="container-fluid">
-        <div class="row no-gutter popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/dametrip.jpg">
-              <img class="img-fluid" src="img/dametrip.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Startup
-                  </div>
-                  <div class="project-name">
-                    Dámetrip
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/korfuservis.jpg">
-              <img class="img-fluid" src="img/korfuservis.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Travel Agency
-                  </div>
-                  <div class="project-name">
-                    Korfuservis
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/letsgotravel.jpg">
-              <img class="img-fluid" src="img/letsgotravel.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Travel Agency
-                  </div>
-                  <div class="project-name">
-                    LetsGo Travel
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/provys.jpg">
-              <img class="img-fluid" src="img/provys.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Multi-national broadcast corporation
-                  </div>
-                  <div class="project-name">
-                    Provys
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/zasuvcicka.jpg">
-              <img class="img-fluid" src="img/zasuvcicka.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    JuniorInternet design contest runner up
-                  </div>
-                  <div class="project-name">
-                    Zásuvčička
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/crowdcrowd.jpg">
-              <img class="img-fluid" src="img/crowdcrowd.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Statup
-                  </div>
-                  <div class="project-name">
-                    CrowdCrowd
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Contact me!</h2>
-            <hr class="primary">
-            <p>I'm always looking for new ideas and opportunities, so don't hesitate and call!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p><a href="tel:00420607439868">(+420) 607 439 868</a></p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-            <p>
-              <a href="mailto:hajnina11@gmail.com">hajnina11@gmail.com</a>
-            </p>
-          </div>
-        </div>
-        <!--<p style="color: grey; text-align: center;">Should I be busy at the moment, I'll call you back as soon as possible.</p>-->
-      </div>
-    </section>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/creative.min.js"></script>
-
-  </body>
-
+<html>
+    <head>
+        <link href="style/style.css" rel="stylesheet" />
+        <meta lang="cs">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <section id="landing">
+            <h1>Ahoj.<br>Jsem Martin.<br>Dělám weby co mají smysl.</h1>
+        </section>
+        <section class="qa">
+            <div class="q">
+                <h1>Proč potřebujete moderní web?</h1>
+            </div>
+            <div class="a">
+                <p>Web je klíčovým nástrojem každého 
+                podniku. Je vaším zástupcem na internetu. 
+                Dobrý web dokáže přilákat uživatele a 
+                udělat z nich vaše zákazníky. Moje weby se 
+                zaměřují přesně na toto.
+                Moderní web zná své uživatele, ví jak ho 
+                používají. Proto na všechny weby 
+                implementuji analytické nástroje, které vám 
+                řeknou kde jsou vaše silné stránky a které je 
+                naopak nutné zlepšit.
+                </p>
+            </div>
+        </section>
+        <section class="qa">
+            <div class="q"><h1>My už ale web máme deset let!</h1></div>
+            <div class="a"><p>To je skvělé! Ale funguje i na mobilu? Poskytuje vám informace o tom jak se zlepšovat? Šetří vám peníze za reklamu a odpovídá sám na dotazy uživatelů? Pomůžu vám vyladit Váš stávající web, aby nebyl zbytečnou přítěží, ale vaší nejlepší vizitkou.</p></div>
+            </section>
+        <section class="qa">
+            <div class="q"><h1>Kolik takový web stojí?</h1></div>
+            <div class="a"><p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový web stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p></div>
+        </section>
+        <section id="kontakt">
+            <h1>Tak co? Jdete do toho? Napište mi. Rád si poslechnu Váš příběh.</h1>
+            <form>
+                <input name="Jméno">
+            </form>
+        </section>
+    </body>
 </html>
