--- a/index.html
+++ b/index.html
@@ -1,44 +1,153 @@
+<!DOCTYPE HTML>
+<!--
+	Paradigm Shift by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-    <head>
-        <link href="style/style.css" rel="stylesheet" />
-        <meta lang="cs">
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <section id="landing">
-            <h1>Ahoj.<br>Jsem Martin.<br>Dělám weby co mají smysl.</h1>
-        </section>
-        <section class="qa">
-            <div class="q">
-                <h1>Proč potřebujete moderní web?</h1>
-            </div>
-            <div class="a">
-                <p>Web je klíčovým nástrojem každého 
-                podniku. Je vaším zástupcem na internetu. 
-                Dobrý web dokáže přilákat uživatele a 
-                udělat z nich vaše zákazníky. Moje weby se 
-                zaměřují přesně na toto.
-                Moderní web zná své uživatele, ví jak ho 
-                používají. Proto na všechny weby 
-                implementuji analytické nástroje, které vám 
-                řeknou kde jsou vaše silné stránky a které je 
-                naopak nutné zlepšit.
-                </p>
-            </div>
-        </section>
-        <section class="qa">
-            <div class="q"><h1>My už ale web máme deset let!</h1></div>
-            <div class="a"><p>To je skvělé! Ale funguje i na mobilu? Poskytuje vám informace o tom jak se zlepšovat? Šetří vám peníze za reklamu a odpovídá sám na dotazy uživatelů? Pomůžu vám vyladit Váš stávající web, aby nebyl zbytečnou přítěží, ale vaší nejlepší vizitkou.</p></div>
-            </section>
-        <section class="qa">
-            <div class="q"><h1>Kolik takový web stojí?</h1></div>
-            <div class="a"><p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový web stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p></div>
-        </section>
-        <section id="kontakt">
-            <h1>Tak co? Jdete do toho? Napište mi. Rád si poslechnu Váš příběh.</h1>
-            <form>
-                <input name="Jméno">
-            </form>
-        </section>
-    </body>
+	<head>
+		<title>Martin Hajný</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section class="intro">
+						<header>
+							<h1>Martin Hajný</h1>
+							<p>Web co má smysl</p>
+							<ul class="actions">
+								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
+						</header>
+						<div class="content">
+							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section id="first">
+						<header>
+							<h2>Pár slov o mě</h2>
+						</header>
+						<div class="content">
+							<p>Zdravím! Jsem Martin. Je mi 19 a žiju na malém městečku na Vysočině. Rád cestuji a fotím. Posledních pět let se živím vývojem webů a marketingem. Věřím, že web by měl být čistý, funkční a vyprávět příběh.</p>
+							<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
+							<hr>
+						</div>
+					</section>
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>Co umím</h2>
+						</header>
+						<div class="content">
+							<p>S čím vám mohu pomoci? Umím toho fakt hodně. HTML umím špíčkově, ale bavím se i s Wordpressem. Několika projektům jsem pomáhal číst z magických čísel Google analytics. Několika klientům pomáhám s marketingem a grafikou.</p>
+							<ul class="feature-icons">
+								<li class="icon fa-code">Vývoj webu</li>
+								<li class="icon fa-angle-double-up">SEO</li>
+								<li class="icon fa-signal">Analytika</li>
+								<li class="icon fa-tasks">Backend</li>
+								<li class="icon fa-gear">Integrace</li>
+								<li class="icon fa-users">Social media</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>Web</h2>
+						</header>
+						<div class="content">
+							<h3>Proč potřebujete moderní web?</h3>
+							<p>Web je klíčovým nástrojem každého podniku. Je vaším zástupcem na internetu. Dobrý web dokáže přilákat uživatele a udělat z nich vaše zákazníky. Moje weby se zaměřují přesně na toto. Moderní web zná své uživatele, ví jak ho používají. Proto na všechny weby implementuji analytické nástroje, které vám řeknou kde jsou vaše silné stránky a které je naopak nutné zlepšit.</p>
+							<h3>My už ale web máme deset let!</h3>
+							<p>To je skvělé! Ale funguje i na mobilu? Poskytuje vám informace o tom jak se zlepšovat? Šetří vám peníze za reklamu a odpovídá sám na dotazy uživatelů? Pomůžu vám vyladit Váš stávající web, aby nebyl zbytečnou přítěží, ale vaší nejlepší vizitkou.</p>
+							<h3>Kolik takový web stojí?</h3>
+							<p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový web stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p>
+						</div>							
+					</section>
+					<section>
+							<header>
+								<h2>Sociální sítě</h2>
+							</header>
+							<div class="content">
+								<h3>Instagram a Facebook? Moje firma?</h3>
+								<p>No jasně! Jestli chcete být vidět, musíte jít za lidmi. A lidi jsou právě na sociálních sítích. Jakmile se zaregistrujete, můžete zdarma oslovit tisíce lidí.</p>
+								<h3>Co s tím?</h3>
+								<p>Sociální sítě letí rychlostí blesku. A vy musíte s nimi. Pokud se na vaší stránce neobjevuje nový příspěvek aspoň třikrát do týdne, můžete jí rovnou smazat. Je potřeba navázat a udržet pozornost potenciálních zákazníků. Ukažte jim fotky ze zákulisí. Nabídněte akci. Nebo prostě řekněte že od zítřka prodáváte parádní citronádu. Ze začátku to může znít ulítle, ale je to tak. Věřte mi!</p>
+								<h3>To musí stát raketu!</h3>
+								<p>Nestojí. A fakt se to vyplatí. Navíc, celé řešení je neuvěřitelně flexibilní a část práce můžete svěřit stávajícím zaměstnancům. Za dva tisíce na měsíc se vám postarám o instagram i facebook, vytuním vám stránku, nafotím vám podnik, vyrobím grafiku a postarám se, aby jste oslovili maximum lidí ve vašem okolí. Cílené reklamy sice také něco stojí, ale z vlastní zkušenosti vím, že se investice velmi rychle vrací, několikrát zhodnocené.</p>
+							</div>							
+						</section>
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>Napište mi!</h2>
+						</header>
+						<div class="content">
+							<p>Máte nápad na nový projekt? Potřebujete oprášit starší web? Chcete lépe využít sociálních sítí? Napište mi! Rád se vám ozvu!</p>
+							<form>
+								<div class="fields">
+									<div class="field half">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="field half">
+										<input type="email" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="field">
+										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" class="button primary" /></li>
+								</ul>
+							</form>
+						</div>
+						<footer>
+							<ul class="items">
+								<li>
+									<h3>Email</h3>
+									<a href="#">hajnina11@gmail.com</a>
+								</li>
+								<li>
+									<h3>Phone</h3>
+									<a href="#">+420 607 439 868</a>
+								</li>
+								<li>
+									<h3>Jsem online</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									</ul>
+								</li>
+							</ul>
+						</footer>
+					</section>
+
+				<!-- Copyright -->
+					<div class="copyright">&copy; Martin Hajný 2019</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
