--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Pár slov o mě</h2>
 						</header>
 						<div class="content">
-							<p>Zdravím! Jsem Martin. Je mi 19 a žiju na malém městečku na Vysočině. Rád cestuji a fotím. Posledních pět let se živím vývojem webů a marketingem. Věřím, že web by měl být čistý, funkční a vyprávět příběh.</p>
+							<p>Zdravím! Jsem Martin. Je mi 19 a žiju na malém městečku na Vysočině. Rád cestuji a fotím. Posledních pět let se živím vývojem webů a marketingem. Ve volném čase jachtím a lyžuju.</p>
 							<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
 							<hr>
 						</div>
@@ -67,12 +67,12 @@
 							<h2>Web</h2>
 						</header>
 						<div class="content">
-							<h3>Proč potřebujete moderní web?</h3>
-							<p>Web je klíčovým nástrojem každého podniku. Je vaším zástupcem na internetu. Dobrý web dokáže přilákat uživatele a udělat z nich vaše zákazníky. Moje weby se zaměřují přesně na toto. Moderní web zná své uživatele, ví jak ho používají. Proto na všechny weby implementuji analytické nástroje, které vám řeknou kde jsou vaše silné stránky a které je naopak nutné zlepšit.</p>
-							<h3>My už ale web máme deset let!</h3>
+							<h3>Bez moderního webu ani ránu!</h3>
+							<p>Web je klíčovým nástrojem každého podniku. Je vaším zástupcem na internetu. Dobré stránky dokážou přilákat uživatele a udělat z nich vaše zákazníky. Ty moje se zaměřují přesně na toto. Jsou intuitivní a běhají svižně. Moderní web zná své potenciální zákazníky, ví, jak ho používají. Proto na všech projektech nasazuji analytické nástroje, které vám řeknou, kde jsou vaše silné stránky a které je naopak nutné zlepšit.</p>
+							<h3>My už ale stránky máme deset let!</h3>
 							<p>To je skvělé! Ale funguje i na mobilu? Poskytuje vám informace o tom jak se zlepšovat? Šetří vám peníze za reklamu a odpovídá sám na dotazy uživatelů? Pomůžu vám vyladit Váš stávající web, aby nebyl zbytečnou přítěží, ale vaší nejlepší vizitkou.</p>
-							<h3>Kolik takový web stojí?</h3>
-							<p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový web stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p>
+							<h3>Kolik taková sranda stojí?</h3>
+							<p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p>
 						</div>							
 					</section>
 					<section>
@@ -99,17 +99,17 @@
 							<form>
 								<div class="fields">
 									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Jméno" />
 									</div>
 									<div class="field half">
 										<input type="email" name="email" id="email" placeholder="Email" />
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+										<textarea name="message" id="message" placeholder="Zpráva" rows="7"></textarea>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
+									<li><input type="submit" value="Odeslat" class="button primary" /></li>
 								</ul>
 							</form>
 						</div>
