photo size redux

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<a href="#">hajnina11@gmail.com</a>
 								</li>
 								<li>
-									<h3>Phone</h3>
+									<h3>Telefon</h3>
 									<a href="#">+420 607 439 868</a>
 								</li>
 								<li>
