--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										<input type="email" name="from" id="email" placeholder="Email" />
 									</div>
 									<div class="field">
-										<textarea name="message" id="body" placeholder="Zpráva" rows="7"></textarea>
+										<textarea name="body" id="message" placeholder="Zpráva" rows="7"></textarea>
 									</div>
 									<input type="hidden" name="to" value="me@martinhajny.me">
 									<input type="hidden" name="redirect" value="martinhajny.me">
