--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<textarea name="body" id="message" placeholder="Zpráva" rows="7"></textarea>
 									</div>
 									<input type="hidden" name="to" value="me@martinhajny.me">
-									<input type="hidden" name="redirect" value="martinhajny.me">
+									<input type="hidden" name="redirect" value="https://martinhajny.me">
 								</div>
 								<ul class="actions">
 									<li><input type="submit" value="Odeslat" class="button primary" /></li>
