--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Pár slov o mě</h2>
+							<h2>Pár slov o mně</h2>
 						</header>
 						<div class="content">
 							<p>Zdravím! Jsem Martin. Je mi 19 a žiju na malém městečku na Vysočině. Rád cestuji a fotím. Posledních pět let se živím vývojem webů a marketingem. Ve volném čase jachtím a lyžuju.</p>
@@ -73,7 +73,7 @@
 							<p>To je skvělé! Ale funguje i na mobilu? Poskytuje vám informace o tom jak se zlepšovat? Šetří vám peníze za reklamu a odpovídá sám na dotazy uživatelů? Pomůžu vám vyladit Váš stávající web, aby nebyl zbytečnou přítěží, ale vaší nejlepší vizitkou.</p>
 							<h3>Kolik taková sranda stojí?</h3>
 							<p>To záleží na tom, jaký web přesně chcete. Ale obecně platí, že jednoduchý jednostránkový stojí přibližně kolem dvou až pěti tisíc, vícestránkový už kolem deseti tisíc. Každý klient má své specifické požadavky a příběh. Ale toto jsou typické částky.</p>
-						</div>							
+						</div>
 					</section>
 					<section>
 							<header>
@@ -86,7 +86,7 @@
 								<p>Sociální sítě letí rychlostí blesku. A vy musíte s nimi. Pokud se na vaší stránce neobjevuje nový příspěvek aspoň třikrát do týdne, můžete jí rovnou smazat. Je potřeba navázat a udržet pozornost potenciálních zákazníků. Ukažte jim fotky ze zákulisí. Nabídněte akci. Nebo prostě řekněte že od zítřka prodáváte parádní citronádu. Ze začátku to může znít ulítle, ale je to tak. Věřte mi!</p>
 								<h3>To musí stát raketu!</h3>
 								<p>Nestojí. A fakt se to vyplatí. Navíc, celé řešení je neuvěřitelně flexibilní a část práce můžete svěřit stávajícím zaměstnancům. Za dva tisíce na měsíc se vám postarám o instagram i facebook, vytuním vám stránku, nafotím vám podnik, vyrobím grafiku a postarám se, aby jste oslovili maximum lidí ve vašem okolí. Cílené reklamy sice také něco stojí, ale z vlastní zkušenosti vím, že se investice velmi rychle vrací, několikrát zhodnocené.</p>
-							</div>							
+							</div>
 						</section>
 
 				<!-- Section -->
@@ -173,7 +173,7 @@
 			gtag('config', 'UA-107364273-1');
 			</script>
 
-	
+
 
 	</body>
 </html>
