--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						</header>
 						<div class="content">
 							<p>Máte nápad na nový projekt? Potřebujete oprášit starší web? Chcete lépe využít sociálních sítí? Napište mi! Rád se vám ozvu!</p>
-							<form action="http://marcat.cz/mailapi/index.php" method="POST">
+							<form action="https://marcat.cz/mailapi/index.php" method="POST">
 								<div class="fields">
 									<div class="field half">
 										<input type="text" name="header" id="name" placeholder="Jméno" data-hj-whitelist />
