--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<h3>Co s tím?</h3>
 								<p>Sociální sítě letí rychlostí blesku. A vy musíte s nimi. Pokud se na vaší stránce neobjevuje nový příspěvek aspoň třikrát do týdne, můžete jí rovnou smazat. Je potřeba navázat a udržet pozornost potenciálních zákazníků. Ukažte jim fotky ze zákulisí. Nabídněte akci. Nebo prostě řekněte že od zítřka prodáváte parádní citronádu. Ze začátku to může znít ulítle, ale je to tak. Věřte mi!</p>
 								<h3>To musí stát raketu!</h3>
-								<p>Nestojí. A fakt se to vyplatí. Navíc, celé řešení je neuvěřitelně flexibilní a část práce můžete svěřit stávajícím zaměstnancům. Za dva tisíce na měsíc se vám postarám o instagram i facebook, vytuním vám stránku, nafotím vám podnik, vyrobím grafiku a postarám se, aby jste oslovili maximum lidí ve vašem okolí. Cílené reklamy sice také něco stojí, ale z vlastní zkušenosti vím, že se investice velmi rychle vrací, několikrát zhodnocené.</p>
+								<p>Nestojí. A fakt se to vyplatí. Navíc, celé řešení je neuvěřitelně flexibilní a část práce můžete svěřit stávajícím zaměstnancům. Za dva tisíce na měsíc se vám postarám o instagram i facebook, vytuním vám stránku, nafotím vám podnik, vyrobím grafiku a postarám se, abyste oslovili maximum lidí ve vašem okolí. Cílené reklamy sice také něco stojí, ale z vlastní zkušenosti vím, že se investice velmi rychle vrací, několikrát zhodnocené.</p>
 							</div>
 						</section>
 
